bug fix for overflow an ie11 with selection contrls in list

--- a/src/stylus/components/_lists.styl
+++ b/src/stylus/components/_lists.styl
@@ -253,3 +253,8 @@ theme(list, "list")
     .list__tile__avatar
       align-items: flex-start
       padding-top: 6px
+      
+
+  // IE11 Fix for overflow
+  .input-group--selection-controls__ripple
+    display: none
